--- a/reviewer.html
+++ b/reviewer.html
@@ -86,7 +86,7 @@
 
   </div>
 
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.11.174/pdf.min.js" integrity="sha512-1+TpoA3nk9/J1GhFp1cV+LDVOGBev5nYeD1yfknhk+aoCA8DmF5asJ5AZt0pOEtpJR/YWZLxE+nobVhtSGcVw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.11.174/pdf.min.js" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <script>
     window.addEventListener('load', () => {
       if (!window.pdfjsLib) {
